fix WindowsProcessBuilderTests.testProcessKillChildren()
Change-Id: I61761775e9f299e1479e3874068d5cbd23805f75